# mshkn

./: .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile.mshkn-base  README.md  deploy.sh  e2e_test.sh  pyproject.toml
docs/plans/: 2026-03-07-disposable-cloud-computers-design.md  2026-03-07-disposable-cloud-computers-test-plan.md  2026-03-08-orchestrator-design.md  2026-03-08-orchestrator-implementation.md  2026-03-08-roadmap.md  2026-03-09-nix-capability-implementation.md  2026-03-09-nix-capability-system-design.md  2026-03-10-codex-agent-integration.md  2026-03-11-parallel-fc-launch-design.md  2026-03-11-parallel-fc-launch-plan.md  2026-03-11-phase1-latency-gates-design.md  2026-03-11-phase1-latency-gates-plan.md  2026-03-12-snapshot-restore-design.md  2026-03-12-snapshot-restore-plan.md  2026-03-13-recipe-system-design.md  2026-03-13-recipe-system-implementation.md  (+1 more)
migrations/: 001_initial.sql  002_checkpoint_thin_volume.sql  003_computer_source_checkpoint.sql  004_capability_cache_volume_id.sql  005_computer_manifest_json.sql  006_deferred_queue.sql  007_snapshot_templates.sql  008_ingress_rules.sql  009_recipes.sql
scripts/: build-rootfs.sh
systemd/: litestream.service  mshkn.service
telegram/: bridge.py  incoming.jsonl  offset.txt
tests/: test_auth.py  test_capability.py  test_checkpoint_label_filter.py  test_checkpoint_parent.py  test_db.py  test_exclusive_restore.py  test_exec_on_create.py  test_firecracker.py  test_health.py  test_ingress.py  test_merge.py  test_metrics.py  test_models.py  test_network.py  test_recipe_builder.py  test_recipe_db.py  test_self_destruct.py  test_ssh.py  test_vm_limit.py  test_vm_manager.py
(+58 files in other folders)
